--- a/angular.json
+++ b/angular.json
@@ -9,7 +9,7 @@
         "@schematics/angular:component": {
           "style": "scss"
         }
-      },
+      },q
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "/docs",
+            "outputPath": "dist/tourisme-medical",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
