--- a/angular.json
+++ b/angular.json
@@ -28,11 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-
+                "src/styles.scss",
                 "node_modules/bootstrap/dist/css/bootstrap.min.css",
-                "node_modules/bootstrap-icons/font/bootstrap-icons.css"
-              ],
+                "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+            ],
 
 
             "scripts": [
