--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+
+  "exclude": [
+    "node_modules"
+  ],
+  "include": ["./src/**/*.ts"]
 }
