--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "highcharts": "^10.3.3",
+    "highcharts-angular": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
