--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "cors": "^2.8.5",
     "highcharts": "^10.3.3",
     "highcharts-angular": "^3.1.2",
     "rxjs": "~7.5.0",
