--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@types/chart.js": "^2.9.37",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.3",
+    "chart.js": "^4.2.1",
     "cors": "^2.8.5",
     "highcharts": "^10.3.3",
     "highcharts-angular": "^3.1.2",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
